--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,7 +1,7 @@
 header#main-header{
     width: 100%;
     height:60px ;
-    background: #da552f;
+    background: #DB7093;
     font-size: 18px;
     font-weight: bold;
     color: #FFF;
